db record revamp